--- a/estilos/normalize.css
+++ b/estilos/normalize.css
@@ -13,6 +13,10 @@ html {
   -webkit-text-size-adjust: 100%; /* 2 */
 }
 
+*{
+  margin: 0;
+  box-sizing: border-box;
+}
 /* Sections
    ========================================================================== */
 
@@ -22,6 +26,7 @@ html {
 
 body {
   margin: 0;
+
 }
 
 /**
@@ -39,7 +44,7 @@ main {
 
 h1 {
   font-size: 2em;
-  margin: 0.67em 0;
+  margin: 0;
 }
 
 /* Grouping content
